exams/cadet/3-0-print_hex/3-0-print_hex.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r3p17.42.us.org
Darwin 15.6.0 x86_64
$> date
Tue Jan 16 10:18:59 PST 2018
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/c++/4.2.1
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/c-exam-alone-in-the-dark-beginner/exam_20180116/nmolina

= Git history ==================================================================
$> git -C /var/folders/97/qpsq8lcx3kxdx6wbrznc5n600000gp/T/tmpHeEPDH/user log --pretty='%H - %an, %ad : %s'
fed6e24fdb08eb6c34440be105c74976ffe03a53 - Exam 42, Tue Jan 16 10:18:38 2018 -0800 : could not figure it out :/
c8998ec85d93f5de884d13d3e80fef4712c5ab0c - Exam 42, Tue Jan 16 09:51:26 2018 -0800 : almost turned in the main!!!!
5dc88c5b635c17777e5c37617bf81c5f7ec8c85e - Exam 42, Tue Jan 16 09:49:43 2018 -0800 : attempted level 2 - print_bits
f5641380465c4adc13e9e00d1ae1234eb55f5871 - Exam 42, Tue Jan 16 09:31:40 2018 -0800 : attempt for level 1 ft_strcpy | man pages are vague -.-
24aa7877f729f6261d8e520ebd00f2ba7a633148 - Exam 42, Tue Jan 16 09:18:29 2018 -0800 : lazy solution for level 0
 
= Collected files ==========================================
$> ls -lAR /var/folders/97/qpsq8lcx3kxdx6wbrznc5n600000gp/T/tmpHeEPDH/user
total 8
-rw-r--r--  1 deepthought  deepthought  1298 Jan 16 10:19 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Jan 16 10:19 ft_strcpy
drwxr-xr-x  3 deepthought  deepthought   102 Jan 16 10:19 maff_revalpha
drwxr-xr-x  3 deepthought  deepthought   102 Jan 16 10:19 print_bits
drwxr-xr-x  3 deepthought  deepthought   102 Jan 16 10:19 print_hex

/var/folders/97/qpsq8lcx3kxdx6wbrznc5n600000gp/T/tmpHeEPDH/user/ft_strcpy:
total 8
-rw-r--r--  1 deepthought  deepthought  1038 Jan 16 10:19 ft_strcpy.c

/var/folders/97/qpsq8lcx3kxdx6wbrznc5n600000gp/T/tmpHeEPDH/user/maff_revalpha:
total 8
-rw-r--r--  1 deepthought  deepthought  993 Jan 16 10:19 maff_revalpha.c

/var/folders/97/qpsq8lcx3kxdx6wbrznc5n600000gp/T/tmpHeEPDH/user/print_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  1150 Jan 16 10:19 print_bits.c

/var/folders/97/qpsq8lcx3kxdx6wbrznc5n600000gp/T/tmpHeEPDH/user/print_hex:
total 8
-rw-r--r--  1 deepthought  deepthought  1278 Jan 16 10:19 print_hex.c
 
= print_hex ====================================================================
$> gcc -Wextra -Wall -Werror print_hex.c -o user_exe 
print_hex.c:21:32: error: expected ')'
                print_hex(basic_atoi(argv[1]);
                                             ^
print_hex.c:21:12: note: to match this '('
                print_hex(basic_atoi(argv[1]);
                         ^
print_hex.c:38:20: error: unused parameter 'number' [-Werror,-Wunused-parameter]
void    print_hex(int number)
                      ^
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
